# haskell-binaryen

./: .gitignore  CHANGELOG.md  README.md  Setup.hs  binaryen.cabal  cabal.project  default.nix  nixpkgs.nix  package.yaml  shell.nix  stack.yaml
.buildkite/: pipeline.yml
.github/workflows/: pipeline.yml
binaryen-hs/: CHANGELOG.md  package.yaml
binaryen-hs-pure/: CHANGELOG.md  package.yaml
binaryen-hs-pure/src/Binaryen/: IR.hs
binaryen-hs/binaryen/src/: binaryen-c.cpp  binaryen-c.h
binaryen/src/: binaryen-c.cpp  binaryen-c.h  config.h
binaryen/src/passes/: WasmIntrinsics.cpp
cbits/: wrappers.c
nix/: binaryen-3481-fix.patch  binaryen.nix  binaryenOverlay.nix  nixpkgs.nix  sources.json
src/: Binaryen.hs
src/Binaryen/: Event.hs  Export.hs  Expression.hs  ExpressionId.hs  ExternalKind.hs  Features.hs  Function.hs  Global.hs  Index.hs  Module.hs  Module.hs-boot  Op.hs  Relooper.hs  SideEffects.hs  Type.hs
src/Bindings/Binaryen/: Raw.hs
test/: test.hs
