cabal-version:      2.0
name:               binaryen
version:            0.0.6.0
synopsis:           Haskell bindings to binaryen
description:
  Haskell bindings to [binaryen](https://github.com/WebAssembly/binaryen). Provides complete bindings to the C API, which can be useful for building WebAssembly toolchains in Haskell.

category:           Compiler
homepage:           https://github.com/tweag/haskell-binaryen#readme
bug-reports:        https://github.com/tweag/haskell-binaryen/issues
maintainer:         Cheng Shao <cheng.shao@tweag.io>
copyright:          (c) 2018 Tweag I/O
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/tweag/haskell-binaryen

library
  exposed-modules:
    Binaryen
    Binaryen.Event
    Binaryen.Export
    Binaryen.Expression
    Binaryen.ExpressionId
    Binaryen.ExternalKind
    Binaryen.Features
    Binaryen.Function
    Binaryen.Global
    Binaryen.Index
    Binaryen.Module
    Binaryen.Op
    Binaryen.Relooper
    Binaryen.SideEffects
    Binaryen.Type

  hs-source-dirs:   src
  ghc-options:      -Wall
  c-sources:        cbits/wrappers.c
  extra-libraries:  binaryen
  build-depends:    base <5
  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          test.hs
  other-modules:    Paths_binaryen
  autogen-modules:  Paths_binaryen
  hs-source-dirs:   test
  ghc-options:      -Wall -threaded -rtsopts
  build-depends:
      base      <5
    , binaryen

  default-language: Haskell2010
